--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     <script src="main.js"></script>
     
     
-    <p>Age: </p><input id="age">
+    <p>Current Age: </p><input id="age">
+    <p>Retirement Age: </p><input id="Rage">
     <form action="">
         <input type="radio" name="risk" value="0.04"> Low<br>
         <input type="radio" name="risk" value="0.06"> Medium<br>
