--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ label > input:checked + img{ /* (RADIO CHECKED) IMAGE STYLES */
         <canvas id="myChart" width="200" height="90"></canvas>
         </div>
         <br>
-        <button class="btn btn-default" id="calc" onclick="back()">Return</button>
+       <!-- <button class="btn btn-default" id="calc" onclick="back()">Return</button> -->
 
     </div>
 
@@ -168,7 +168,7 @@ label > input:checked + img{ /* (RADIO CHECKED) IMAGE STYLES */
 </div>    
 
         
-   <center> <button class="btn btn-default" id="calc" onclick="buttonA()">Calculate</button>
+   <center> <button class="btn btn-default" id="calc" onclick="buttonB()">Calculate</button>
     </center></div>
     </div>
     
